--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
-  text-align: center;
+  text-align: start;
+  background-color: black;
+  color: whitesmoke;
+  align-items: center;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -13,21 +15,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +22,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+header{
+  background-color: black;
+}
+.navbar{
+  color: whitesmoke;
+}
+#navbarScrollingDropdown{
+  color: whitesmoke;
 }
